# Qwen3-ASR-ncnn

./: .gitignore  CMakeLists.txt  Qwen3-ASR-ncnn-移植计划.md  README.md  TECHNICAL_SUMMARY.md  qwen3_asr
.github/workflows/: build.yml
convert/: asr_convert_conv.py  asr_convert_frontend.py  asr_dump_encoder.py  asr_dump_thinker.py  asr_golden.py  asr_p0.py  asr_p1prep.py  asr_p4prep.py  asr_probe.py
src/: asr_encoder.cpp  asr_frontend.cpp  asr_frontend_ncnn.cpp  asr_p4.cpp  asr_thinker.cpp  asr_thinker_kv.cpp  mel_features.cpp  qwen3_asr.cpp  qwen3_asr_ncnn.cpp
